fixed relauy-compiler conflict in package json, added overflow hidden to wizard modal

--- a/src/css/components/wizard/wizardModal.scss
+++ b/src/css/components/wizard/wizardModal.scss
@@ -1,6 +1,6 @@
 .WizardModal__modal{
   @include modal(600px, 960px);
-
+  overflow: hidden;
   padding: 20px 60px;
 }
 
